<resources>
    <string name="app_name">Need2Hear</string>
    <string name="info_page">welcome to Need2Hear</string>
    <string name="fortune">receive a fortune</string>
    <string name="horoscope">receive a horoscope</string>
    <string name="fortuneInfo">OPEN YOUR FORTUNE COOKIE</string>
    <string name="yourFortune">your fortune will appear here</string>
    <string name="select_a_horoscope">SELECT A HOROSCOPE</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">pisces</string>
    <string name="aries">aries</string>
    <string name="taurus">taurus</string>
    <string name="gemini">gemini</string>
    <string name="cancer">cancer</string>
    <string name="leo">leo</string>
    <string name="vrigo">vrigo</string>
    <string name="libra">libra</string>
    <string name="scorpio">scorpio</string>
    <string name="sagittarius">sagittarius</string>
</resources>
