<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_horoscope"
        android:textColor="#204B3F"
        android:textSize="24sp" />

    <Button
        android:id="@+id/aquarius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aquarius" />

    <Button
        android:id="@+id/pisces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pisces" />

    <Button
        android:id="@+id/aries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aries" />

    <Button
        android:id="@+id/taurus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taurus" />

    <Button
        android:id="@+id/gemini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gemini" />

    <Button
        android:id="@+id/cancer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancer" />

    <Button
        android:id="@+id/leo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leo" />

    <Button
        android:id="@+id/virgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vrigo" />

    <Button
        android:id="@+id/libra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libra" />

    <Button
        android:id="@+id/scorpio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scorpio" />

    <Button
        android:id="@+id/sagittarius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sagittarius" />

</LinearLayout>